# cjm-capability-ffmpeg

./: .gitignore  README.md  capability.html  capability.html.md  environment.yml  index.html  index.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_capability_ffmpeg/: _modidx.py  capability.py
cjm_capability_ffmpeg/utils/: availability.py  codec.py  probe.py  progress.py  segments.py
cjm_media_plugin_ffmpeg/: _modidx.py  meta.py  plugin.py
cjm_media_plugin_ffmpeg/utils/: availability.py  codec.py  probe.py  progress.py  segments.py
nbs/: capability.ipynb  index.ipynb  meta.ipynb  nbdev.yml  plugin.ipynb
nbs/utils/: availability.ipynb  codec.ipynb  probe.ipynb  progress.ipynb  segments.ipynb
tests/: test_capability.py  test_utils.py
tests_manual/: test_ffmpeg_integration.py  test_ffmpeg_plugin.py  test_ffmpeg_plugin_system.py  validate_ffmpeg_e2e.md  validate_ffmpeg_e2e.py
utils/: availability.html  availability.html.md  codec.html  codec.html.md  probe.html  probe.html.md  progress.html  progress.html.md  segments.html  segments.html.md
